--- a/ng-app/src/app/event/event-plan-view/event-plan-view.component.html
+++ b/ng-app/src/app/event/event-plan-view/event-plan-view.component.html
@@ -472,13 +472,13 @@
               <div class="mat-body">{{ supplierInvoice.status }}</div>
             </div>
             <div class="action-group">
-              <button class="btn-sm" (click)="changeItemStatus(supplierInvoice, 'supplierInvoice', 'Confirmed')" mat-raised-button color="primary"
+              <button class="btn-sm" (click)="changeItemStatus(supplierInvoice, 'supplier-invoice', 'Confirmed')" mat-raised-button color="primary"
                 *ngIf="checkButtonIsValid(supplierInvoice, ['Open'])">Confirm</button>
-              <button class="btn-sm" (click)="changeItemStatus(supplierInvoice, 'supplierInvoice', 'Paid')" mat-raised-button
+              <button class="btn-sm" (click)="changeItemStatus(supplierInvoice, 'supplier-invoice', 'Paid')" mat-raised-button
                 color="primary" *ngIf="checkButtonIsValid(supplierInvoice, ['Confirmed'])">Pay</button>
-              <button class="btn-sm" (click)="changeItemStatus(supplierInvoice, 'supplierInvoice', 'Cancelled')" mat-raised-button
+              <button class="btn-sm" (click)="changeItemStatus(supplierInvoice, 'supplier-invoice', 'Cancelled')" mat-raised-button
                 color="primary" *ngIf="checkButtonIsValid(supplierInvoice, ['Open', 'Confirmed'])">Cancel</button>
-              <button class="btn-sm" (click)="changeItemStatus(supplierInvoice, 'supplierInvoice', 'Closed')" mat-raised-button color="primary"
+              <button class="btn-sm" (click)="changeItemStatus(supplierInvoice, 'supplier-invoice', 'Closed')" mat-raised-button color="primary"
                 *ngIf="checkButtonIsValid(supplierInvoice, ['Paid'])">Close</button>
             </div>
             <div class="view-field">
@@ -544,6 +544,16 @@
             <div class="view-field">
               <label class="mat-body-strong">Status</label>
               <div class="mat-body">{{ paymentVoucher.status }}</div>
+            </div>
+            <div class="action-group">
+              <button class="btn-sm" (click)="changeItemStatus(paymentVoucher, 'payment-voucher', 'Issued')" mat-raised-button color="primary"
+                *ngIf="checkButtonIsValid(paymentVoucher, ['Open'])">Issue</button>
+              <button class="btn-sm" (click)="changeItemStatus(paymentVoucher, 'payment-voucher', 'Signed')" mat-raised-button
+                color="primary" *ngIf="checkButtonIsValid(paymentVoucher, ['Issued'])">Sign</button>
+              <button class="btn-sm" (click)="changeItemStatus(paymentVoucher, 'payment-voucher', 'Cancelled')" mat-raised-button
+                color="primary" *ngIf="checkButtonIsValid(paymentVoucher, ['Open', 'Issued'])">Cancel</button>
+              <button class="btn-sm" (click)="changeItemStatus(paymentVoucher, 'payment-voucher', 'Closed')" mat-raised-button color="primary"
+                *ngIf="checkButtonIsValid(paymentVoucher, ['Signed'])">Close</button>
             </div>
             <div class="view-field">
               <label class="mat-body-strong">Payment Type</label>
