--- a/ng-app/src/app/attendee/payment-list/payment-list.component.html
+++ b/ng-app/src/app/attendee/payment-list/payment-list.component.html
@@ -1,1 +1,1 @@
-<app-standard-list title="Payment" domainName="payment" [columns]="columns" [filterList]="filterList"></app-standard-list>
+<app-standard-list title="Payment" domainName="payment" [columns]="columns" [filterList]="filterList" [includes]="includes"></app-standard-list>
